RESOLVED FIXED154434
Blocked plug-in placeholder is sometimes not shown.
https://bugs.webkit.org/show_bug.cgi?id=154434
Summary Blocked plug-in placeholder is sometimes not shown.
alan
Reported 2016-02-18 21:07:39 PST
1. In Safari Preferences > Security > Plug-in Settings, set Flash or Quicktime to Ask or Block 2. Go to http://www.adobe.com/software/flash/about/ 3. Repeatedly reload the page
Attachments
Patch (4.33 KB, patch)
2016-02-18 21:23 PST, alan
no flags
Patch (4.37 KB, patch)
2016-02-18 21:24 PST, alan
no flags
alan
Comment 1 2016-02-18 21:08:04 PST
alan
Comment 2 2016-02-18 21:23:36 PST
alan
Comment 3 2016-02-18 21:24:35 PST
Brent Fulgham
Comment 4 2016-02-18 23:29:14 PST
Comment on attachment 271730 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=271730&action=review Looks good. r=me. I do wish we had some way to test this properly. > Source/WebCore/rendering/RenderEmbeddedObject.h:97 > + UnavailablePluginIndicatorState m_isUnavailablePluginIndicatorState { UnavailablePluginIndicatorState::Uninitialized }; Very nice!
WebKit Commit Bot
Comment 5 2016-02-19 03:48:18 PST
Comment on attachment 271730 [details] Patch Clearing flags on attachment: 271730 Committed r196813: <http://trac.webkit.org/changeset/196813>
WebKit Commit Bot
Comment 6 2016-02-19 03:48:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.